--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -282,7 +282,7 @@ Ext.onReady(function (){
                     var feature_out =parser.read(response.priv.responseText);
                     
                     for ( x in feature_out){
-                        console.log(x.initialize());
+                        console.log(x.initialize);
                     }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
