--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -279,10 +279,10 @@ Ext.onReady(function (){
           callback: function(response){
                 if (response.priv.responseText){
                     var parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out =parser.read(response.priv.responseText);
+                    var feature_out =parser.parseCoords.multipolygon(response.priv.responseText);
                     
                     for ( x in feature_out){
-                        console.log(x.initialize);
+                        console.log(x);
                     }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
