--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -271,6 +271,9 @@ Ext.onReady(function (){
     var source_index = stored_layer["source"];
     var jurisdiction_filter=null;
     var jurisdiction_extent=new OpenLayers.Bounds();
+    
+    var juris_vec_layer = new OpenLayers.Layer.Vector();
+    map.addLayer(juris_vec_layer);
 
     if(jurisdiction != "" ){
         var juris_wfs = wfs_proto_creator("{{feature_juris}}", "EPSG:4326", "json");
@@ -279,11 +282,12 @@ Ext.onReady(function (){
           callback: function(response){
                 if (response.priv.responseText){
                     var parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out =parser.parseCoords.polygon(response.priv.responseText);
-                    
+                    var feature_out =parser.read(response.priv.responseText);
                     for ( x in feature_out){
                         console.log(x);
                     }
+                    juris_vec_layer.addFeatures(feature_out);
+                    console.log(juris_vec_layer.features);
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
                         console.log(parser.parseFeature(feature_out));
