--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -283,11 +283,11 @@ Ext.onReady(function (){
                 if (response.priv.responseText){
                     var parser = new OpenLayers.Format.GeoJSON();
                     var feature_out =parser.read(response.priv.responseText);
-                    for ( x in feature_out){
-                        console.log(x);
-                    }
                     juris_vec_layer.addFeatures(feature_out);
                     console.log(juris_vec_layer.features);
+                    for (x in juris_vec_layer.features.geometry){
+                        console.log(x.geometry.getBounds())
+                    }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
                         console.log(parser.parseFeature(feature_out));
