--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -286,7 +286,7 @@ Ext.onReady(function (){
                     juris_vec_layer.addFeatures(feature_out);
                     console.log(juris_vec_layer.features);
                     for (x in juris_vec_layer.features.geometry){
-                        console.log(x.geometry.getBounds());
+                        console.log(x.geometry.bounds);
                     }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
