--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -285,7 +285,7 @@ Ext.onReady(function (){
                     var feature_out =parser.read(response.priv.responseText);
                     juris_vec_layer.addFeatures(feature_out);
                     console.log(juris_vec_layer.features);
-                    for (x in juris_vec_layer.features.geometry){
+                    for (x in juris_vec_layer.features){
                         console.log(x.geometry.bounds);
                     }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
