--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -303,7 +303,8 @@ Ext.onReady(function (){
                         console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
                     }*/
-                }  
+                }
+                juris_done=true;  
             }
         }); 
         while( !juris_done){
