--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -179,7 +179,7 @@ function wfs_proto_creator(layer_request, srs, outformat){
         featureNS: "http://www.geonode.org/",
         srsName: srs,
         outputFormat: outformat,
-        async: true
+        async: false
     });
 }
 
