--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -225,8 +225,28 @@ function selection_bounds(map_bounds, highlight_layer) {
             }
         }*/
     });
-    console.log("selection bounds");
-    console.log(wfs_resp);
+    //console.log("selection bounds");
+    //console.log(wfs_resp);
+    var json_parser = new OpenLayers.Format.JSON();
+    var feature_out = json_parser.read(response.priv.responseText);
+     for ( var i=0; i<feature_out.totalFeatures; i++ ){
+        var f = feature_out.features[i];
+        var corners = {
+            "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
+            "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
+            "ll_x": f.properties.MINX, "ll_y": f.properties.MINY,
+            "lr_x": f.properties.MAXX,"lr_y": f.properties.MINY
+        }
+
+        var tile = createTile(corners);
+        if (find_georef(tile_list, tile.georef)<0){
+             tile_list.push(tile);
+             tile.feature = createHighlightBox(tile.corners);
+             highlight_layer.addFeatures([tile.feature]);
+        }
+
+    }
+    display_points("point_display", highlight_layer);
 }
 
 function blocking_wfs_getfeature(layer_name, geoserver, outFormat ){
