--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -228,7 +228,7 @@ function selection_bounds(map_bounds, highlight_layer) {
     //console.log("selection bounds");
     //console.log(wfs_resp);
     var json_parser = new OpenLayers.Format.JSON();
-    var feature_out = json_parser.read(response.priv.responseText);
+    var feature_out = json_parser.read(wfs_resp.priv.responseText);
      for ( var i=0; i<feature_out.totalFeatures; i++ ){
         var f = feature_out.features[i];
         var corners = {
