--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -244,7 +244,7 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
             }
         }
     });
-     for (var i = 0; i < juris_vec_layer.features.length; i++){
+     for (var i = 0; i < jurisdiction_geoms.features.length; i++){
         console.log(jurisdiction_geoms.features[i]);
     }
 }
