--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -238,14 +238,16 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 juris_vec_layer.addFeatures(feature_out);
                 //console.log(juris_vec_layer.features);
                 jurisdiction_geoms = juris_vec_layer.features;
-               
+               /*for (var i = 0; i <juris_vec_layer.features.length; i++){
+                 jurisdiction 
+               }*/
                     //console.log(juris_vec_layer.features[i].geometry.bounds.transform(new OpenLayers.Bounds("EPSG:4326"), new OpenLayers.Bounds("EPSG:900913")));
                     //console.log(jurisdiction_geoms[i].features);
             }
         }
     });
-     for (var i = 0; i < jurisdiction_geoms.features.length; i++){
-        console.log(jurisdiction_geoms.features[i]);
+     for (var i = 0; i < jurisdiction_geoms.length; i++){
+        console.log(jurisdiction_geoms[i]);
     }
 }
 
