--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -238,6 +238,7 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 juris_vec_layer.addFeatures(feature_out);
                 //console.log(juris_vec_layer.features);
                 jurisdiction_geoms = juris_vec_layer.features;
+                console.log(jurisdiction_geoms);
                /*for (var i = 0; i <juris_vec_layer.features.length; i++){
                  jurisdiction 
                }*/
