--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -262,7 +262,7 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
       callback: function(response){
             if (response.priv.responseText){
                 var parser = new OpenLayers.Format.GeoJSON();
-                var feature_out =parser.(response.priv.responseText);
+                var feature_out =parser.read(response.priv.responseText);
                 juris_vec_layer.addFeatures(feature_out);
                 jurisdiction_geoms = juris_vec_layer.features;
             }
