--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -209,6 +209,7 @@ function selection_bounds(map_bounds, highlight_layer) {
                     value: linear_ring
                 })
             );
+            console.log(geom_filters[i]);
         }
         if (geom_filters.length > 0){
             or_filter = new OpenLayers.Filter.Logical({
