--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -202,12 +202,15 @@ function selection_bounds(map_bounds, highlight_layer) {
    if (jurisdiction_geoms.length > 0){
         for ( var i=0; i < jurisdiction_geoms.length; i++){
             var linear_ring = jurisdiction_geoms[i].geometry.components[0].components[0].components;
-            geom_filters.push( 
-                new OpenLayers.Filter.Spatial({
+            var spatial_filter = new OpenLayers.Filter.Spatial({
                     type: OpenLayers.Filter.Spatial.INTERSECTS,
                     property: "the_geom",
                     value: new OpenLayers.Geometry.LinearRing(linear_ring)
-                })
+                });
+            node = new OpenLayers.Format.Filter({version: "1.0.0"}).write(spatial_filter);
+            console.log(node)
+            geom_filters.push( 
+               spatial_filter
             );
         }
          console.log(geom_filters);
