--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -207,6 +207,7 @@ function selection_bounds(map_bounds, highlight_layer) {
                     property: "the_geom",
                     value: new OpenLayers.Geometry.LinearRing(linear_ring)
                 });
+            console.log(spatial_filter);
             node = new OpenLayers.Format.Filter({version: "1.0.0"}).write(spatial_filter);
             console.log(node);
             geom_filters.push( 
