--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -208,6 +208,7 @@ function selection_bounds(map_bounds, highlight_layer) {
                     value: new OpenLayers.Geometry.LinearRing(linear_ring)
                 });
             console.log(spatial_filter);
+            console.log("halothar");
             node = new OpenLayers.Format.Filter({version: "1.0.0"}).write(spatial_filter);
             console.log(node);
             geom_filters.push( 
