--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -194,7 +194,6 @@ function selection_bounds(map_bounds, highlight_layer) {
         value: transformed_bounds.toGeometry()
     });
     
-    var jurisdiction_filter;
     var geom_filters=[];
     var or_filter;
     var conditional_filter = new OpenLayers.Filter.Logical({
@@ -250,7 +249,7 @@ function selection_bounds(map_bounds, highlight_layer) {
     }
     var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json");         
     var wfs_resp = wfs_proto.read({
-        filter: geom_filters,
+        filter: box_filters,
         callback: function(response){
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.JSON();
