--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -211,7 +211,7 @@ function selection_bounds(map_bounds, highlight_layer) {
             }),
             new OpenLayers.Filter.Comparison({
                 type: "==",
-                property: "Ortho",
+                property: "ORTHO",
                 value: "1"
             }),
         ]
