--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -253,6 +253,7 @@ function selection_bounds(map_bounds, highlight_layer) {
         filter: data_filter,
         callback: function(response){
             if(response.priv.responseText){
+                console.log(geom_filters);
                 var json_parser = new OpenLayers.Format.JSON();
                 var feature_out = json_parser.read(response.priv.responseText);
 
