--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -195,27 +195,6 @@ function selection_bounds(map_bounds, highlight_layer) {
     });
     
     var geom_filters=[];
-    var or_filter;
-    var data_filter = new OpenLayers.Filter.Logical({
-        type: "||",
-        filters: [
-            new OpenLayers.Filter.Comparison({
-                type: "==",
-                property: "DSM",
-                value: "1"
-            }),
-            new OpenLayers.Filter.Comparison({
-                type: "==",
-                property: "DTM",
-                value: "1"
-            }),
-            new OpenLayers.Filter.Comparison({
-                type: "==",
-                property: "ORTHO",
-                value: "1"
-            }),
-        ]
-    });
     var filter = box_filter;
     
    if (jurisdiction_geoms.length > 0){
@@ -234,7 +213,6 @@ function selection_bounds(map_bounds, highlight_layer) {
                spatial_filter
             );
         }
-        console.log(geom_filters);
         if (geom_filters.length > 0){
             or_filter = new OpenLayers.Filter.Logical({
                 type: OpenLayers.Filter.Logical.OR,
@@ -250,15 +228,17 @@ function selection_bounds(map_bounds, highlight_layer) {
     }
     var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json");         
     var wfs_resp = wfs_proto.read({
-        filter: data_filter,
+        filter: box_filter,
+        geom_filters: geom_filters,
         callback: function(response){
             if(response.priv.responseText){
                 console.log(geom_filters.length);
                 var json_parser = new OpenLayers.Format.JSON();
                 var feature_out = json_parser.read(response.priv.responseText);
-
-                for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                    var f = feature_out.features[i];
+                var tiles = hasData(jurisdictionFilter(this.geom_filters, feature_out)
+                
+                for ( var i=0; i<tiles.length; i++ ){
+                    var f = tiles[i];
                     var corners = {
                         "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
                         "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
@@ -294,6 +274,48 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
             }
         }
     });
+}
+
+function jurisdictionFilter(jurisdiction_filters, feature_list){
+    var tile_list = [];
+    for (j in jurisdiction_filters){
+        for (f in feature_list){
+            if(jurisdiction_filters.evaluate(f)){
+                tile_list.push(f);
+            }
+        }
+    }
+    return tile_list;
+}
+
+function hasData( f_list){
+   var data_filter = new OpenLayers.Filter.Logical({
+        type: "||",
+        filters: [
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "DSM",
+                value: "1"
+            }),
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "DTM",
+                value: "1"
+            }),
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "ORTHO",
+                value: "1"
+            }),
+        ]
+    });
+    var tile_list = [];
+    for (f in f_list){
+        if(data_filter.evaluate(f)){
+            tile_list.push(f);
+        }
+    }
+    return tile_list;
 }
 
 function removeHighlight(georef, vec_layer){
