--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -184,6 +184,50 @@ function wfs_proto_creator(layer_request, srs, outformat){
     });
 }
 
+function jurisdictionFilter(jurisdiction_filters, feature_list){
+    console.log("feature_list.length="+feature_list.length);
+    var tile_list = [];
+    for (j in jurisdiction_filters){
+        for (f in feature_list){
+            if(jurisdiction_filters.evaluate(f)){
+                tile_list.push(f);
+            }
+        }
+    }
+    return tile_list;
+}
+
+function hasData( f_list){
+    console.log("f_list.length="+f_list.length);
+   var data_filter = new OpenLayers.Filter.Logical({
+        type: "||",
+        filters: [
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "DSM",
+                value: "1"
+            }),
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "DTM",
+                value: "1"
+            }),
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "ORTHO",
+                value: "1"
+            }),
+        ]
+    });
+    var tile_list = [];
+    for (f in f_list){
+        if(data_filter.evaluate(f)){
+            tile_list.push(f);
+        }
+    }
+    return tile_list;
+}
+
 function selection_bounds(map_bounds, highlight_layer) {
     
     var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
@@ -274,18 +318,6 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
             }
         }
     });
-}
-
-function jurisdictionFilter(jurisdiction_filters, feature_list){
-    var tile_list = [];
-    for (j in jurisdiction_filters){
-        for (f in feature_list){
-            if(jurisdiction_filters.evaluate(f)){
-                tile_list.push(f);
-            }
-        }
-    }
-    return tile_list;
 }
 
 function hasData( f_list){
